コンビニ側の商品編集機能実装、賞味期限日付の処理

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
-        "axios-jsonp": "^1.0.4"
+        "axios-jsonp": "^1.0.4",
+        "moment": "^2.30.1"
     }
 }
