--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
-        "axios-jsonp": "^1.0.4",
-        "moment": "^2.30.1"
+        "axios-jsonp": "^1.0.4"
     }
 }
