--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
-        "axios-jsonp": "^1.0.4"
+        "axios-jsonp": "^1.0.4",
+        "vue-router": "^3.6.5"
     }
 }
