--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.7.16"
+        "vue-template-compiler": "^2.5.17"
     },
     "dependencies": {
         "axios-jsonp": "^1.0.4",
-        "vue-router": "^3.6.5"
+        "vue-router": "^3.6.5",
+        "vuex": "^3.6.2"
     }
 }
