--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "axios-jsonp": "^1.0.4",
         "vue-router": "^3.6.5",
+        "vuelidate": "^0.7.7",
         "vuex": "^3.6.2"
     }
 }
